[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprite/cards/card0000.png" type="Texture" id=1]
[ext_resource path="res://script/card.gd" type="Script" id=2]
[ext_resource path="res://font/XS_font.tres" type="DynamicFont" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 165 )

[node name="Card" type="Area2D"]
script = ExtResource( 2 )
normalColor = Color( 1, 1, 1, 1 )
disabledColor = Color( 0.305882, 0.305882, 0.305882, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 39 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="TitleLabel" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -84.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "AXE"
align = 1

[node name="DescLabel" type="Label" parent="."]
modulate = Color( 0.203922, 0.203922, 0.203922, 1 )
margin_left = -81.0
margin_top = 35.0
margin_right = 82.0
margin_bottom = 122.0
custom_fonts/font = ExtResource( 3 )
text = "attack nearby 3x3 area"
align = 1
valign = 1
autowrap = true

[connection signal="input_event" from="." to="." method="_on_Card_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
